--- a/Scipyla2022.ipynb
+++ b/Scipyla2022.ipynb
@@ -2548,7 +2548,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Veamos que paso en 1979"
+        "### Veamos que paso en 1979\n",
+        "![](https://github.com/nico-edvai/scipy-2022-salta/blob/main/images/1979.png?raw=true)"
       ],
       "metadata": {
         "id": "0bEL8cWUvLQ8"
@@ -2802,6 +2803,15 @@
           "execution_count": 208
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "![](https://github.com/nico-edvai/scipy-2022-salta/blob/main/images/Brainstorming.png?raw=true)"
+      ],
+      "metadata": {
+        "id": "tER6LzV3FF08"
+      }
     },
     {
       "cell_type": "code",
